--- a/source/ElectStore/templates/base.html
+++ b/source/ElectStore/templates/base.html
@@ -17,7 +17,7 @@
       <ul class="navbar-nav">
           {% block nav %}
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Добавить товар</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'add_product' %}">Добавить товар</a>
         </li>
           {% endblock %}
       </ul>
