Реализовал редактирование товара

--- a/source/ElectStore/templates/one_product.html
+++ b/source/ElectStore/templates/one_product.html
@@ -1,12 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}{{ product.name_goods }}{% endblock %}
 {% block nav %}
-{#    <li class="nav-item">#}
-{#      <a class="nav-link active" aria-current="page" href="{% url 'add_task_view' %}">Новая задача</a>#}
-{#    </li>#}
-{#    <li class="nav-item">#}
-{#      <a class="nav-link active" aria-current="page" href="{% url 'task_update_view' task.pk%}">Редактировать</a>#}
-{#    </li>#}
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="{% url 'update_product' product.pk%}">Редактировать</a>
+    </li>
 {#    <li class="nav-item">#}
 {#       <a class="nav-link active" aria-current="page" href="{% url 'task_delete_view' task.pk%}">Удалить</a>#}
 {#    </li>#}
