--- a/source/ElectStore/templates/one_product.html
+++ b/source/ElectStore/templates/one_product.html
@@ -4,9 +4,9 @@
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="{% url 'update_product' product.pk%}">Редактировать</a>
     </li>
-{#    <li class="nav-item">#}
-{#       <a class="nav-link active" aria-current="page" href="{% url 'task_delete_view' task.pk%}">Удалить</a>#}
-{#    </li>#}
+    <li class="nav-item">
+       <a class="nav-link active" aria-current="page" href="{% url 'delete_product' product.pk%}">Удалить</a>
+    </li>
 {% endblock %}
 {% block content %}
     <h2>Категория: {{ product.get_category_display}}</h2>
