--- a/source/ElectStore/templates/index.html
+++ b/source/ElectStore/templates/index.html
@@ -2,11 +2,17 @@
 {% block title %}Главная{% endblock %}
 {% block content %}
     {% for product in products %}
-        <hr style="border: 3px solid red;">
-        <h2>Название: {{ product.name_goods }}</h2>
-        <h2>Цена: {{ product.cost }}</h2>
-        <h2>Категория: {{ product.category }}</h2>
-        <p><a href="{% url "one_product" product.pk %}">Детальный просмотр...</a></p>
-        <hr style="border: 3px solid red;">
+        <br>
+        <div class="card" style="max-width: 400px;">
+          <div class="card-header">
+            Категория: {{ product.get_category_display }}
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Название: {{ product.name_goods }}</h5>
+            <p class="card-text">Цена: {{ product.cost }}</p>
+            <a href="{% url "one_product" product.pk %}" class="btn btn-primary" style="float: right">
+                Детальный просмотр...</a>
+          </div>
+        </div>
     {% endfor %}
 {% endblock %}
