--- a/source/ElectStore/templates/product_delete.html
+++ b/source/ElectStore/templates/product_delete.html
@@ -4,12 +4,20 @@
     <div>
         <form action="{% url 'delete_product' products.pk %}" method="POST">
         {% csrf_token %}
-        <h2>Вы действительно хотите удалить продукт!!! <br> {{ products.name_goods }}</h2>
-            <div class="gap-2 col-6 ">
-                <a><button class="btn btn-primary" type="submit">Да</button></a>
-                <a href="{% url "one_product" products.pk %}"><button class="btn btn-primary" type="button">Нет</button></a>
+            <div class="card text-center" style="max-width: 18rem;">
+              <div class="card-header">
+                  </div>
+              <div class="card-body">
+                <h5 class="card-title">Удаление записи!</h5>
+                <p class="card-text">Вы действительно хотите удалить продукт!!! <br> {{ products.name_goods }}</p>
+                <div class="gap-2 col-6" style="dis">
+                    <a><button class="btn btn-danger" type="submit">Да</button></a>
+                    <a href="{% url "one_product" products.pk %}"><button class="btn btn-primary" type="button">Нет</button></a>
+                </div>
+              </div>
+              <div class="card-footer">
+                </div>
             </div>
         </form>
-
     </div>
 {% endblock %}
