--- a/source/ElectStore/templates/product_update.html
+++ b/source/ElectStore/templates/product_update.html
@@ -7,5 +7,5 @@
     {% include 'partial/form.html' with button_text="Редактировать" %}
     </form>
     <br>
-    <p><a href="{% url "one_product" product.pk %}">Назад</a></p>
+    <p><a href="{% url "one_product" product.pk %}" class="btn btn-primary" style="float: left">Назад</a></p>
 {% endblock %}
