--- a/source/ElectStore/templates/product_delete.html
+++ b/source/ElectStore/templates/product_delete.html
@@ -2,7 +2,7 @@
 {% block title %}Удаление товара{% endblock %}
 {% block content %}
     <div>
-        <form action="{% url 'delete_product' products.pk %}" method="POST">
+        <form action="{% url 'delete_product' product.pk %}" method="POST">
         {% csrf_token %}
             <div class="card text-center" style="max-width: 18rem;">
               <div class="card-header">
@@ -12,7 +12,7 @@
                 <p class="card-text">Вы действительно хотите удалить продукт!!! <br> {{ products.name_goods }}</p>
                 <div class="gap-2 col-6" style="dis">
                     <a><button class="btn btn-danger" type="submit">Да</button></a>
-                    <a href="{% url "one_product" products.pk %}"><button class="btn btn-primary" type="button">Нет</button></a>
+                    <a href="{% url "one_product" product.pk %}"><button class="btn btn-primary" type="button">Нет</button></a>
                 </div>
               </div>
               <div class="card-footer">
