--- a/source/ElectStore/templates/base.html
+++ b/source/ElectStore/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,27 +6,32 @@
     <title>{% block title %} {% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'CSS/style.css' %}">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container">
-    <a class="navbar-brand" href="{% url "index" %}">Главная</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-          {% block nav %}
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'add_product' %}">Добавить товар</a>
-        </li>
-          {% endblock %}
-      </ul>
+    <div class="container">
+        <a class="navbar-brand" href="{% url "index" %}">Главная</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                {% block nav %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'add_product' %}">Добавить товар</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'cart_view' %}">Корзина</a>
+                    </li>
+                {% endblock %}
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
 <div class="container">
-    {% block content%}{% endblock %}
+    {% block content %}{% endblock %}
 </div>
 
 
