--- a/source/ElectStore/templates/product_delete.html
+++ b/source/ElectStore/templates/product_delete.html
@@ -10,7 +10,7 @@
               <div class="card-body">
                 <h5 class="card-title">Удаление записи!</h5>
                 <p class="card-text">Вы действительно хотите удалить продукт!!! <br> {{ products.name_goods }}</p>
-                <div class="gap-2 col-6" style="dis">
+                <div class="gap-2 col-6" style="float: right">
                     <a><button class="btn btn-danger" type="submit">Да</button></a>
                     <a href="{% url "one_product" product.pk %}"><button class="btn btn-primary" type="button">Нет</button></a>
                 </div>
