--- a/source/ElectStore/templates/item_cart.html
+++ b/source/ElectStore/templates/item_cart.html
@@ -2,42 +2,52 @@
 {% block title %}Главная{% endblock %}
 {% block nav %} {% endblock %}
 {% block content %}
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">Название</th>
-            <th scope="col">Цена</th>
-            <th scope="col">Количество</th>
-            <th scope="col">Сумма</th>
-            <th scope="col">#</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for item in object_list %}
+    <div>
+        <table class="table">
+            <thead>
             <tr>
-                <td>{{ item.product.name_goods }}</td>
-                <td>{{ item.product.cost }}</td>
-                <td>{{ item.quantity }}</td>
-                <td>{% widthratio item.quantity 1 item.product.cost %}</td>
-                <th scope="row">
-                    <form action="{% url 'cart_delete' item.pk %}" method="POST">
-                        {% csrf_token %}
-                        <a>
-                            <button class="btn btn-danger" type="submit">Удалить</button>
-                        </a>
-                    </form>
-                </th>
+                <th scope="col">Название</th>
+                <th scope="col">Цена</th>
+                <th scope="col">Количество</th>
+                <th scope="col">Сумма</th>
+                <th scope="col">#</th>
             </tr>
-        {% endfor %}
-        </tbody>
-        <tfoot>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>Итого:</td>
-            <th scope="row">{{ total }}</th>
-        </tr>
-        </tfoot>
-    </table>
+            </thead>
+            <tbody>
+            {% for item in object_list %}
+                <tr>
+                    <td>{{ item.product.name_goods }}</td>
+                    <td>{{ item.product.cost }}</td>
+                    <td>{{ item.quantity }}</td>
+                    <td>{% widthratio item.quantity 1 item.product.cost %}</td>
+                    <th scope="row">
+                        <form action="{% url 'cart_delete' item.pk %}" method="POST">
+                            {% csrf_token %}
+                            <a>
+                                <button class="btn btn-danger" type="submit">Удалить</button>
+                            </a>
+                        </form>
+                    </th>
+                </tr>
+            {% endfor %}
+            </tbody>
+            <tfoot>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>Итого:</td>
+                <th scope="row">{{ total }}</th>
+            </tr>
+            </tfoot>
+        </table>
+    </div>
+    {% if object_list %}
+        <h1>Оформить заказ</h1>
+        <form action="{% url "order_create" %}" method="post">
+            {% include 'partial/form.html' with button_text="Оформить" %}
+        </form>
+    {% endif %}
+
 {% endblock %}
+
