--- a/source/ElectStore/templates/product_delete.html
+++ b/source/ElectStore/templates/product_delete.html
@@ -3,19 +3,23 @@
 {% block content %}
     <div>
         <form action="{% url 'delete_product' product.pk %}" method="POST">
-        {% csrf_token %}
+            {% csrf_token %}
             <div class="card text-center" style="max-width: 18rem;">
-              <div class="card-header">
-                  </div>
-              <div class="card-body">
-                <h5 class="card-title">Удаление записи!</h5>
-                <p class="card-text">Вы действительно хотите удалить продукт!!! <br> {{ products.name_goods }}</p>
-                <div class="gap-2 col-6" style="float: right">
-                    <a><button class="btn btn-danger" type="submit">Да</button></a>
-                    <a href="{% url "one_product" product.pk %}"><button class="btn btn-primary" type="button">Нет</button></a>
+                <div class="card-header">
                 </div>
-              </div>
-              <div class="card-footer">
+                <div class="card-body">
+                    <h5 class="card-title">Удаление записи!</h5>
+                    <p class="card-text">Вы действительно хотите удалить продукт!!! <br> {{ products.name_goods }}</p>
+                    <div class="gap-2 col-6" style="float: right">
+                        <a>
+                            <button class="btn btn-danger" type="submit">Да</button>
+                        </a>
+                        <a href="{% url "one_product" product.pk %}">
+                            <button class="btn btn-primary" type="button">Нет</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="card-footer">
                 </div>
             </div>
         </form>
