--- a/source/ElectStore/templates/base.html
+++ b/source/ElectStore/templates/base.html
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-        <a class="navbar-brand" href="{% url "index" %}">Главная</a>
+        <a class="navbar-brand" href="{% url "ElectStore:index" %}">Главная</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,11 +20,19 @@
             <ul class="navbar-nav">
                 {% block nav %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'add_product' %}">Добавить товар</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'ElectStore:add_product' %}">Добавить
+                            товар</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'cart_view' %}">Корзина</a>
+                        <a class="nav-link active" aria-current="page"
+                           href="{% url 'ElectStore:cart_view' %}">Корзина</a>
                     </li>
+                    {% if not user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="{% url 'accounts:login' %}?next={{ request.get_full_path }}">Вход</a>
+                    </li>
+                    {% endif %}
                 {% endblock %}
             </ul>
         </div>
