--- a/source/ElectStore/templates/partial/form.html
+++ b/source/ElectStore/templates/partial/form.html
@@ -2,4 +2,4 @@
 <br>
 {{ form.as_p }}
 
-<input type="submit" value={{ button_text }}/>
+<input type="submit" class="btn btn-danger" value={{ button_text }}>
