--- a/source/ElectStore/templates/products/one_product.html
+++ b/source/ElectStore/templates/products/one_product.html
@@ -2,10 +2,10 @@
 {% block title %}{{ product.name_goods }}{% endblock %}
 {% block nav %}
     <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="{% url 'update_product' product.pk %}">Редактировать</a>
+        <a class="nav-link active" aria-current="page" href="{% url 'ElectStore:update_product' product.pk %}">Редактировать</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="{% url 'delete_product' product.pk %}">Удалить</a>
+        <a class="nav-link active" aria-current="page" href="{% url 'ElectStore:delete_product' product.pk %}">Удалить</a>
     </li>
 {% endblock %}
 {% block content %}
@@ -19,10 +19,10 @@
             <p>Остаток: {{ product.residue }}</p>
         </div>
         <div class="card-footer bg-transparent border-info">
-            <a href="{% url "index" %}" class="btn btn-primary" style="float: right">Назад</a></div>
-        <form action="{% url "cart_add" product.pk %}" method="post">
+            <a href="{% url "ElectStore:" %}" class="btn btn-primary" style="float: right">Назад</a></div>
+        <form action="{% url "ElectStore:cart_add" product.pk %}" method="post">
             {% csrf_token %}
-            <input type="hidden" name="site" value="{% url "one_product" product.pk %}">
+            <input type="hidden" name="site" value="{% url "ElectStore:one_product" product.pk %}">
             <input style="float: right" class="btn btn-danger" type="submit" value="Добавить в корзину"/>
         </form>
     </div>
