--- a/source/ElectStore/templates/products/product_create.html
+++ b/source/ElectStore/templates/products/product_create.html
@@ -3,7 +3,7 @@
 {% block nav %} {% endblock %}
 {% block content %}
     <h1>Добавить новый товар</h1>
-    <form action="{% url "add_product" %}" method="post">
+    <form action="{% url "ElectStore:add_product" %}" method="post">
         {% include 'partial/form.html' with button_text="Добавить" %}
     </form>
 {% endblock %}
