--- a/source/ElectStore/templates/products/product_delete.html
+++ b/source/ElectStore/templates/products/product_delete.html
@@ -2,7 +2,7 @@
 {% block title %}Удаление товара{% endblock %}
 {% block content %}
     <div>
-        <form action="{% url 'delete_product' product.pk %}" method="POST">
+        <form action="{% url 'ElectStore:delete_product' product.pk %}" method="POST">
             {% csrf_token %}
             <div class="card text-center" style="max-width: 18rem;">
                 <div class="card-header">
@@ -14,7 +14,7 @@
                         <a>
                             <button class="btn btn-danger" type="submit">Да</button>
                         </a>
-                        <a href="{% url "one_product" product.pk %}">
+                        <a href="{% url "ElectStore:one_product" product.pk %}">
                             <button class="btn btn-primary" type="button">Нет</button>
                         </a>
                     </div>
