--- a/source/ElectStore/templates/products/product_update.html
+++ b/source/ElectStore/templates/products/product_update.html
@@ -3,9 +3,9 @@
 {% block nav %} {% endblock %}
 {% block content %}
     <h1>Редактировать товар</h1>
-    <form action="{% url "update_product" product.pk %}" method="post">
+    <form action="{% url "ElectStore:update_product" product.pk %}" method="post">
         {% include 'partial/form.html' with button_text="Редактировать" %}
     </form>
     <br>
-    <p><a href="{% url "one_product" product.pk %}" class="btn btn-primary" style="float: left">Назад</a></p>
+    <p><a href="{% url "ElectStore:one_product" product.pk %}" class="btn btn-primary" style="float: left">Назад</a></p>
 {% endblock %}
