--- a/source/ElectStore/templates/base.html
+++ b/source/ElectStore/templates/base.html
@@ -18,12 +18,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page"
-                       href="{% url 'ElectStore:cart_view' %}">Корзина</a>
-                </li>
                 {% block nav %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page"
+                           href="{% url 'ElectStore:cart_view' %}">Корзина</a>
+                    </li>
                     {% if not user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link"
+                               href="{% url 'accounts:registration' %}?next={{ request.get_full_path }}">Регистрация</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link"
                                href="{% url 'accounts:login' %}?next={{ request.get_full_path }}">Вход</a>
