--- a/source/ElectStore/templates/partial/form.html
+++ b/source/ElectStore/templates/partial/form.html
@@ -1,5 +1,11 @@
 {% csrf_token %}
 <br>
-{{ form.as_p }}
-
+{% for field in form %}
+    <p><label for="{{ field.id_for_label }}">{{ field.label }}</label></p>
+    {% for error in field.errors %}
+        <p class="text-danger">{{ error }}</p>
+    {% endfor %}
+    {{ field }}
+{% endfor %}
+<br>
 <input type="submit" class="btn btn-danger" value={{ button_text }}>
