Сделал проверку на права доступа, добавил группу "Модераторы" с правами доступа на создание, редактирование, удаление продуктов.

--- a/source/ElectStore/templates/base.html
+++ b/source/ElectStore/templates/base.html
@@ -33,10 +33,13 @@
                                href="{% url 'accounts:login' %}?next={{ request.get_full_path }}">Вход</a>
                         </li>
                     {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'ElectStore:add_product' %}">Добавить
-                                товар</a>
-                        </li>
+                        {% if perms.ElectStore.add_product %}
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page"
+                                   href="{% url 'ElectStore:add_product' %}">Добавить
+                                    товар</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'accounts:logout' %}">Выход</a>
                         </li>
