--- a/source/ElectStore/templates/base.html
+++ b/source/ElectStore/templates/base.html
@@ -41,6 +41,10 @@
                             </li>
                         {% endif %}
                         <li class="nav-item">
+                            <a class="nav-link active" aria-current="page"
+                               href="{% url 'ElectStore:orders' %}">Заказы</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{% url 'accounts:logout' %}">Выход</a>
                         </li>
                     {% endif %}
